fixed spacing between search bar and logo

--- a/google-homepage/styles.css
+++ b/google-homepage/styles.css
@@ -21,12 +21,20 @@ a {
   padding: 1px;
 }
 
-.logo {
+.logo, .inputbox {
   display: block;
-  margin-top: 70px;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
   padding: 10px;
 }
 
+.logo {
+  margin-top: 70px;
+ 
+}
+
+.inputbox [type=text] {
+  padding: 12px 20px;
+  box-sizing: border-box;
+}
